--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -199,8 +199,7 @@ img {
   }
 
   .main-content {
-    display: grid;
-    grid-template-columns: 1fr;
+    display: block;
   }
 
   .filter-column {
