--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -28,6 +28,12 @@ img {
   max-width: 100%;
 }
 
+.grid-wrapper {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 .header {
   background-color: #f9f9f9;
   margin: 0 auto;
@@ -190,15 +196,17 @@ img {
 
 @media screen and (max-width: 1180px) {
   .courses-grid {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem;
   }
 }
 
 @media screen and (max-width: 800px) {
   .header {
     flex-flow: column wrap;
+  }
+
+  .header-left {
+    height: 30rem;
   }
 
   .main-content {
@@ -219,8 +227,6 @@ img {
 
 @media screen and (max-width: 600px) {
   .courses-grid {
-    display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 1rem;
   }
 }
